CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME "cpp_base" )
SET( EXECUTABLE_OUTPUT_PATH "../bin" )
SET( LIBRARY_OUTPUT_PATH "../libs" )

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3 -Wall -std=c++11 -g" )

PROJECT( ${PROJ_NAME} )

FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
FILE( GLOB_RECURSE PROJ_HEADERS inc/${PROJ_NAME}/*.h )

ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
